--- a/client/app/dashboard/main/modals/delete/delete.component.html
+++ b/client/app/dashboard/main/modals/delete/delete.component.html
@@ -5,9 +5,9 @@
     </span>
 </div>
 <div mat-dialog-actions>
-    <div class="clearfix width-100">
+    <div class="width-100">
         <div class="lg-col lg-col-6">
-            <button class="mr2 width-100" mat-button (click)="onCancel()">Cancel</button>        
+            <button class="mr-2 width-100" mat-button (click)="onCancel()">Cancel</button>        
         </div>
 
         <div class="lg-col lg-col-6">
