--- a/client/app/dashboard/user/user.component.scss
+++ b/client/app/dashboard/user/user.component.scss
@@ -5,6 +5,13 @@
     object-fit: cover;
 }
 
+.avatar-35 {
+    height: 35px;
+    width: 35px;
+    border-radius: 17px;
+    object-fit: cover;
+}
+
 .avatar-100-image-overlay {
     display: none;
 }
