--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,7 +1,3 @@
-<div class="flex">    
-    <div class="width-100">
-        <div class="content">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
+<div class="height-100 width-100 content">
+    <router-outlet></router-outlet>
 </div>
