--- a/client/app/dashboard/main/modals/create/create.component.html
+++ b/client/app/dashboard/main/modals/create/create.component.html
@@ -1,5 +1,5 @@
 <h1 mat-dialog-title>Create Copied Item</h1>
-<div mat-dialog-content class="container">
+<div mat-dialog-content class="container m-0 p-0">
     <mat-form-field class="value-input-control">
         <textarea
             matInput
@@ -20,13 +20,13 @@
         </mat-error>
     </mat-form-field>
 </div>
-<div mat-dialog-actions>
-    <div class="clearfix width-100">
-        <div class="lg-col lg-col-6">
-            <button class="mr2 width-100" mat-button (click)="onCancel()">Cancel</button>        
+<div mat-dialog-actions class="d-flex justify-content-end">
+    <div class="row">   
+        <div class="col-6">
+            <button class="mr-2 width-100" mat-button (click)="onCancel()">Cancel</button>        
         </div>
 
-        <div class="lg-col lg-col-6">
+        <div class="col-6">
             <button [disabled]="!item.value" class="width-100" mat-button [mat-dialog-close]="item.value" color="primary">Create</button>
         </div>
     </div>
