--- a/client/app/dashboard/user/change-password/change-password.component.html
+++ b/client/app/dashboard/user/change-password/change-password.component.html
@@ -1,29 +1,32 @@
-<div class="clearfix pt2">
-    <div class="md-col lg-col lg-col-3 md-col-2">&nbsp;</div>
-    <div class="md-col lg-col lg-col-6 md-col-8">
-        <mat-card class="m4 indigo-background-color">
-            <div class="width-100 logo-container">
-                <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
-            </div>
-            <mat-card-header class="mt3 mb2 flex justify-center items-center">
-                <div class="mr2" style="margin-top: -3px;">
-                    <mat-icon class="white-text-color mr1 font-size-40" style="height: 100%;">security</mat-icon>
+<div class="flex-grow-1 d-flex justify-content-center align-items-center">
+    <div class="width-100 row pt-2">
+        <div class="col-lg-3 col-md-2">&nbsp;</div>
+        <div class="col-lg-6 col-md-8">
+            <mat-card class="m-4 indigo-background-color">
+                <div class="width-100 logo-container">
+                    <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
                 </div>
-                <div>
-                    <h1 class="white-text-color my1 mb2">Change Password</h1>
-                </div>
-            </mat-card-header>
-            <mat-card-content>
-                    <password-field *ngIf="!user.getSocial()" [inputControl]="oldPasswordControl" [title]="'Old Password'"></password-field>
-                    <password-field [inputControl]="newPasswordControl" [title]="'New Password'"></password-field>
-                    <password-field [inputControl]="newConfirmPasswordControl" [matchValue]="newPasswordControl.value" [title]="'Confirm New Password'"></password-field>
-
-                <div class="clearfix mt3">
-                    <div class="lg-col lg-col-12 p1">
-                        <button class="width-100" mat-raised-button (click)="changePassword()">Change Password</button>
+                <mat-card-header class="mt-3 mb-2 d-flex justify-content-center align-items-center">
+                    <div style="margin-top: -3px;">
+                        <mat-icon class="white-text-color mr-1 font-size-40" style="height: 100%;">security</mat-icon>
                     </div>
-                </div>
-            </mat-card-content>
-        </mat-card>
+                    <div>
+                        <h1 class="white-text-color d-none d-sm-none px-3 my-1 mb-2">Change Password</h1>
+                        <h2 class="white-text-color d-sm-block ml-2 my-1 mb-2">Change Password</h2>
+                    </div>
+                </mat-card-header>
+                <mat-card-content>
+                        <password-field *ngIf="!user.getSocial()" [inputControl]="oldPasswordControl" [title]="'Old Password'"></password-field>
+                        <password-field [inputControl]="newPasswordControl" [title]="'New Password'"></password-field>
+                        <password-field [inputControl]="newConfirmPasswordControl" [matchValue]="newPasswordControl.value" [title]="'Confirm New Password'"></password-field>
+    
+                    <div class="mt-3">
+                        <div class="col-lg-12 p-1">
+                            <button class="width-100" mat-raised-button (click)="changePassword()">Change Password</button>
+                        </div>
+                    </div>
+                </mat-card-content>
+            </mat-card>
+        </div>
     </div>
 </div>
