--- a/client/app/dashboard/user/user.component.html
+++ b/client/app/dashboard/user/user.component.html
@@ -1,50 +1,53 @@
-<div class="clearfix pt2">
-    <div class="md-col lg-col lg-col-3 md-col-2">&nbsp;</div>
-    <div class="md-col lg-col lg-col-6 md-col-8">
-        <mat-card class="m4 indigo-background-color" style="margin-bottom: 1em;">
-            <div class="width-100 logo-container">
-                <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
-            </div>
-            <mat-card-header class="mt3 mb2 flex justify-center items-center">
-                <div class="mr2" style="margin-top: -3px;">
-                    <mat-icon class="white-text-color mr1 font-size-40" style="height: 100%;">account_circle</mat-icon>
+<div class="flex-grow-1 d-flex justify-content-center align-items-center">
+    <div class="width-100 row m-0">
+        <div class="col-lg-3 col-sm-2 col-1 p-0">&nbsp;</div>
+        <div class="col-lg-6 col-sm-8 col-10 p-0">
+            <mat-card class="m-4 indigo-background-color" style="margin-bottom: 1em;">
+                <div class="width-100 logo-container">
+                    <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
                 </div>
-                <div>
-                    <h1 class="white-text-color my1 mb2">Account Details</h1>
-                </div>
-            </mat-card-header>
-            <mat-card-content>
-                <div class="avatar-100-image-overlay-wrapper flex justify-center">
-                    <div class="avatar-100" class="avatar-100 avatar-100-image-overlay white-text-color">
-                        <input type="file" id="profile-picture" ngFileSelect [options]="uploaderOptions" [events]="inputUploadEvent" (onUpload)="handleUpload($event)" (beforeUpload)="beforeUpload($event)" (onPreviewData)="handlePreviewData($event)">
-                        <span>
-                            <b>Change</b>&nbsp;
-                        </span>
-                        <mat-icon>mode_edit</mat-icon>
+                <mat-card-header class="mt-3 mb-2 d-flex justify-content-center align-items-center">
+                    <div class="mr-2" style="margin-top: -3px;">
+                        <mat-icon class="white-text-color font-size-40" style="height: 100%;">account_circle</mat-icon>
                     </div>
-
                     <div>
-                        <img [src]="profilePictureUrl" alt="profile picture" class="avatar-100">
+                        <h1 class="white-text-color d-none d-sm-none ml-2 my-1 mb-2">Account Details</h1>
+                        <h2 class="white-text-color d-sm-block ml-2 my-1 mb-2">Account Details</h2>
                     </div>
-                </div>
-
-                <div class="mt1 mb2" *ngIf="!!uploadProgress">
-                    <mat-progress-bar class="white-progress-bar" [color]="primary" [mode]="determinate" [value]="uploadProgress">
-                    </mat-progress-bar>
-                </div>
-
-                <username-field [inputControl]="usernameControl" [checkForUniqueness]="true"></username-field>
-                <email-field [inputControl]="emailControl" [checkForUniqueness]="true"></email-field>
-                
-                <div class="clearfix mt3">
-                    <div class="md-col lg-col md-col-12 lg-col-6 px3">
-                        <button [disabled]="emailControl.pending || usernameControl.pending" class="width-100" mat-raised-button (click)="saveChanges()">Save Changes</button>
+                </mat-card-header>
+                <mat-card-content>
+                    <div class="avatar-100-image-overlay-wrapper d-flex justify-content-center">
+                        <div class="avatar-100" class="avatar-100 avatar-100-image-overlay white-text-color">
+                            <input type="file" id="profile-picture" ngFileSelect [options]="uploaderOptions" [events]="inputUploadEvent" (onUpload)="handleUpload($event)" (beforeUpload)="beforeUpload($event)" (onPreviewData)="handlePreviewData($event)">
+                            <span>
+                                <b>Change</b>&nbsp;
+                            </span>
+                            <mat-icon>mode_edit</mat-icon>
+                        </div>
+    
+                        <div>
+                            <img [src]="profilePictureUrl" alt="profile picture" class="avatar-100">
+                        </div>
                     </div>
-                    <div class="md-col lg-col md-col-12 lg-col-6 px3">
-                        <button class="width-100" routerLink="/dashboard/change-password" mat-raised-button>Change Password</button>
+    
+                    <div class="mt-1 mb-2" *ngIf="!!uploadProgress">
+                        <mat-progress-bar class="white-progress-bar" [color]="primary" [mode]="determinate" [value]="uploadProgress">
+                        </mat-progress-bar>
                     </div>
-                </div>
-            </mat-card-content>
-        </mat-card>
+    
+                    <username-field [inputControl]="usernameControl" [checkForUniqueness]="true"></username-field>
+                    <email-field [inputControl]="emailControl" [checkForUniqueness]="true"></email-field>
+                    
+                    <div class="mt-3 row">
+                        <div class="col-md-12 col-lg-6 px-2">
+                            <button [disabled]="emailControl.pending || usernameControl.pending" class="width-100" mat-raised-button (click)="saveChanges()">Save Changes</button>
+                        </div>
+                        <div class="col-md-12 col-lg-6 px-2">
+                            <button class="width-100" routerLink="/dashboard/change-password" mat-raised-button>Change Password</button>
+                        </div>
+                    </div>
+                </mat-card-content>
+            </mat-card>
+        </div>
     </div>
 </div>
