--- a/client/app/login/login.component.html
+++ b/client/app/login/login.component.html
@@ -1,48 +1,50 @@
-<div class="clearfix pt1">
-    <div class="lg-col lg-col-3 md-col-1">&nbsp;</div>
-    <div class="lg-col lg-col-6 md-col-10">
-        <mat-card class="m4 indigo-background-color">
-            <div class="width-100 logo-container">
-                <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
-            </div>
-            <mat-card-header class="mt3 flex justify-center items-center">
-                <div class="mr2">
-                    <mat-icon style="font-size: 35px;" class="white-text-color">account_circle</mat-icon>
+<div class="height-100 d-flex justify-content-center align-items-center">
+    <div class="width-100 pt-1 row">
+        <div class="col-lg-3 col-md-3 col-sm-2 col-1">&nbsp;</div>
+        <div class="col-lg-6 col-md-6 col-sm-8 col-10 p-0">
+            <mat-card class="m-4 indigo-background-color">
+                <div class="width-100 logo-container">
+                    <img src="/images/icon.png" alt="logo" class="logo indigo-background-color" >
                 </div>
-                <div>
-                    <h2 class="white-text-color my1">Login</h2>
-                </div>
-            </mat-card-header>
-            <mat-card-content>
-                <email-field [inputControl]="emailControl"></email-field>
-                <password-field [inputControl]="passwordControl"></password-field>
-                
-                <mat-slide-toggle [(ngModel)]="rememberMe" class="white-toggle-switch mt2">Remember Me</mat-slide-toggle>
-                
-                <div class="clearfix mt3">
-                    <div class="lg-col lg-col-6 px3">
-                        <button class="width-100" mat-raised-button (click)="login()">Login</button>
+                <mat-card-header class="mt-3 d-flex justify-content-center align-items-center">
+                    <div class="mr-2">
+                        <mat-icon style="font-size: 35px;" class="white-text-color">account_circle</mat-icon>
                     </div>
-                    <div class="lg-col lg-col-6 px3">
-                        <button class="width-100" routerLink="/register" mat-raised-button fxFlex>Register</button>
+                    <div class="ml-2">
+                        <h2 class="white-text-color my-1">Login</h2>
                     </div>
-                </div>
-
-                <div class="clearfix mt3">
-                    <div class="lg-col lg-col-12 px3 pb2">
-                        <button mat-raised-button class="width-100 google-login" (click)="socialSignIn('google')">
-                            <i class="fa fa-google"></i>
-                            Login with Google
-                        </button>
+                </mat-card-header>
+                <mat-card-content>
+                    <email-field [inputControl]="emailControl"></email-field>
+                    <password-field [inputControl]="passwordControl"></password-field>
+                    
+                    <mat-slide-toggle [(ngModel)]="rememberMe" class="white-toggle-switch mt-2">Remember Me</mat-slide-toggle>
+                    
+                    <div class="mt-3 row mx-0">
+                        <div class="col-md-6 px-2">
+                            <button class="width-100" mat-raised-button (click)="login()">Login</button>
+                        </div>
+                        <div class="col-md-6 px-2">
+                            <button class="width-100" routerLink="/register" mat-raised-button fxFlex>Register</button>
+                        </div>
                     </div>
-                    <div class="lg-col lg-col-12 px3">
-                        <button mat-raised-button class="width-100 facebook-login" (click)="socialSignIn('facebook')">
-                            <i class="fa fa-facebook" style="float: left"></i>
-                            Login with Facebook
-                        </button>
+    
+                    <div class="mt-3">
+                        <div class="col-lg-12 px-2 pb-2">
+                            <button mat-raised-button class="width-100 google-login" (click)="socialSignIn('google')">
+                                <i class="fa fa-google"></i>
+                                Login with Google
+                            </button>
+                        </div>
+                        <div class="col-lg-12 px-2">
+                            <button mat-raised-button class="width-100 facebook-login" (click)="socialSignIn('facebook')">
+                                <i class="fa fa-facebook" style="float: left"></i>
+                                Login with Facebook
+                            </button>
+                        </div>
                     </div>
-                </div>
-            </mat-card-content>
-        </mat-card>
+                </mat-card-content>
+            </mat-card>
+        </div>
     </div>
 </div>
