--- a/client/app/utility.scss
+++ b/client/app/utility.scss
@@ -4,6 +4,10 @@
     width: 100% !important;
 }
 
+.height-100 {
+    height: 100% !important;
+}
+
 .padding-bottom-10 {
     padding-bottom: 10px;
 }
